# multi-cli-orchestrator

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  adapter-contract-tests.md  capability-probe-spec.md  capability-research.md  dry-run-plan.md  implementation-gate-checklist.md  mco  mco.example.json  mco.step3-baseline.json  package.json  pyproject.toml  task_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  gate.yml  publish-npm.yml  publish-pypi.yml
docs/archive/: README.md
docs/archive/phase-2026-02/: README.md  multi-cli-orchestrator-proposal.md  notes.md  task_plan.md
docs/contracts/: cli-json-v0.1.x.md
docs/implementation/: step0-interface-freeze.md
docs/probes/2026-02-26/: lock-summary.yaml  schema_c2.json  summary.md
docs/releases/: v0.1.0.md  v0.1.0.zh-CN.md  v0.1.2.md  v0.1.2.zh-CN.md
docs/templates/: step5-benchmark-report.md.tpl
reports/adapter-contract/2026-02-26/: matrix.json  runtime-gh-report.md  runtime-gh-result.json  step1-adapter-dryrun.json  step1-adapter-dryrun.md  step3-5provider-baseline.md  step4-parallel-benchmark.md  step5-full-parallel.result.json  step5-parallel-benchmark-summary.json  step5-parallel-benchmark.md  step5-serial.result.json  summary.md
reports/dry-run/2026-02-26/: artifacts-manifest.json  execution-log.md  gate-decision.md  idempotency-check.json  idempotency_key.txt  state-transition.json
reports/gate/: 2026-02-26-signoff.md
reports/review/bench-parallel2-20260226/: decision.md  findings.json  run.json  summary.md
reports/review/bench-parallel2b-20260226/: decision.md  findings.json  run.json  summary.md
reports/review/bench-parallel2c-20260226/: decision.md  findings.json  run.json  summary.md
runtime/: __init__.py  artifacts.py  cli.py  config.py  contracts.py  errors.py  formatters.py  orchestrator.py  retry.py  review_engine.py  types.py
runtime/adapters/: __init__.py  claude.py  codex.py  gemini.py  opencode.py  parsing.py  qwen.py  shim.py
runtime/schemas/: review_findings.schema.json
scripts/: collect_ci_artifacts.py  render_step5_report.py  run_capability_probes.sh  run_runtime_gate_tests.sh  run_step1_adapter_dryrun.py  run_step5_parallel_benchmark.sh
skills/mco-cli/: SKILL.md
tests/: test_adapter_contracts.py  test_ci_reporting_tools.py  test_cli.py  test_cli_doctor.py  test_cli_json_contract.py  test_cli_output_formats.py  test_config.py  test_contract_freeze.py  test_error_taxonomy.py  test_formatters.py  test_parsing_contract.py  test_retry_semantics.py  test_review_engine.py  test_step5_benchmark_script.py
(+128 files in other folders)
